...
    _appRouter = AppRouter(context.read<AppBloc>());
  }

  @override
  Widget build(BuildContext context) {
    return MaterialApp.router(
      title: 'TagFootStats',
      theme: AppTheme.darkTheme,
      debugShowCheckedModeBanner: false,
      routerConfig: _appRouter.router,
    );
  }
}
...
